基本框架搭建

--- a/src/main/resources/templates/error/underBuilt.html
+++ b/src/main/resources/templates/error/underBuilt.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>404</title>
+    <title>UnderBuild</title>
 </head>
 <body>
-<p>未找到页面</p>
+<p>this page is under build</p>
 </body>
 </html>
