--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -30,7 +30,7 @@
             var _this = this;
             axios({
                 method:"post", //请求方式
-                url:"Team/refuse", //要测试的接口
+                url:"Blog/selectOne", //要测试的接口
                 data: {
                     team_id:"1",
                     leader:"aasd",
@@ -41,13 +41,17 @@
                     image: "www.XXX",
                     title: "标题XX",
                     content: "我是内容",
-                    username: "asdasda",
+                    username: "aa",
                     name:"goods",
                     des:"this is a good",
                     state:"s0",
                     password: "1111",
                     blog_id:"1",
-                    gid:"2"
+                    gid:"2",
+                    key:1,
+                    id:1,
+                    oldU:"123",
+                    newU:"imNewU"
                 }
             }).then(function (resp) {
                 console.log(resp.data) //打印返回数据到控制台
