--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -30,7 +30,7 @@
             var _this = this;
             axios({
                 method:"post", //请求方式
-                url:"Team/getApplication", //要测试的接口
+                url:"comment/listAllComment", //要测试的接口
                 data: {
                     team_id:"1",
                     leader:"aasd",
@@ -48,7 +48,7 @@
                     des:"this is a good",
                     state:"s0",
                     password: "1111",
-                    blog_id:"1",
+                    blog_id:1,
                     posterName:"newusername",
                     gid:"2",
                     key:1,
